<resources>
    <string name="app_name">Shelter</string>
    <string name="home">Beranda</string>
    <string name="news">Berita</string>
    <string name="emergency">Darurat</string>
    <string name="profile">Profil</string>

    <!--Classification for Notification -->
    <string name="emergency_yellow">Tetap Tenang dan Waspada</string>
    <string name="emergency_red">Mari Bersiap Untuk Evakuasi</string>
    <string name="emergency_green">Bersyukurlah, Anda di Tempat Aman</string>


    <string name="template_text">This is text</string>
    <string name="template_title">This is title</string>

    <string name="selamat_datang">Selamat Datang,</string>
    <string name="note_notif">Anda berada di wilayah</string>
    <string name="siaga_bencana">Siaga Bencana</string>
    <string name="siaga_lapor">Siaga Lapor</string>
    <string name="info_lapor">Hubungi kami melalui panggilan jika anda  membutuhkan bantuan  terkait status bencana  lokasi anda.</string>
    <string name="hubungi_dengan_teks">Hubungi dengan Teks</string>
    <string name="atau">atau</string>
    <string name="riwayat_lapor">Riwayat Lapor</string>
    <string name="already_nhave_an_naccount">Sudah Memiliki Akun?</string>
    <string name="email">Email</string>
    <string name="old_password">Password Lama</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="register">Pengguna baru? Daftar sekarang !</string>
    <string name="login">Masuk</string>
    <string name="berita_terkini">Berita Terkini</string>
    <string name="artikel_terpercaya">Artikel Terpercaya</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="siaga_lapor_pesan">Siaga Lapor Pesan</string>
    <string name="tulis_lapor">Tuliskan Laporan Anda</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="akun_nonvalid">Maaf, akun yang anda masukkan tidak valid</string>
    <string name="daftar">Daftar Sekarang</string>
    <string name="error_account">Maaf, akun sudah terdaftar</string>
    <string name="profil_anda">Profil Anda</string>
    <string name="nama">Nama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="lokasi">Lokasi</string>
    <string name="keluar">Keluar</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="shelter_terkini">Shelter Terkini</string>
    <string name="literatur_shelter">Literatur Shelter</string>
    <string name="literatur">Literatur</string>
    <string name="no_data">Tidak ada data</string>
    <string name="edit_profil_anda">Edit Profil Anda</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="ubah_lokasi">Ubah Lokasi</string>
    <string name="rician_riwayat_lapor">Rician Riwayat Lapor</string>
    <string name="nama_pelapor">Nama Pelapor</string>
    <string name="akses_laporan">Akses Laporan</string>
    <string name="rician_laporan">Rician Laporan</string>
    <string name="note_pusat">Note Pusat</string>
    <string name="hari_tanggal">Hari tanggal</string>
    <string name="isi_laporan">Isi Laporan</string>
    <string name="zone_fill">Zona %s</string>

    <string name="look_further">Lihat selengkapnya</string>
    <string name="humadity">Humadity</string>
    <string name="windspeed">Windspeed</string>
    <string name="ultraviolet">Sun Duration</string>
    <string name="rainfall">Rainfall</string>
    <string name="degree">o</string>

    <string name="location">location</string>
    <string name="choose_your_current_location">Choose your current location</string>
    <string name="pilih">Pilih</string>

    <string name="name_cant_be_blank">Nama gak boleh kosong</string>
    <string name="fill_a_valid_email">Masukan email yang benar</string>
    <string name="fill_old_password">Masukan password lama Anda</string>
    <string name="fill_new_password">Masukan password baru Anda</string>
    <string name="password_confirmation_must_be_same">Password konfirmasi harus sama</string>
    <string name="female">Wanita</string>
    <string name="male">Pria</string>
    <string name="check_your_email">Cek email Anda</string>
    <string name="template_response">Silahkan pergi ke pos 12 di Jalan\nBangau No.12</string>
    <string name="no_prediction_in_future">Tidak ada prediksi di masa mendatang</string>
    <string name="choose_location">Mohon pilih lokasi</string>
    <string name="choose_gender">Mohon pilih kelamin</string>


</resources>