<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/ic_float_vector" />

            <TextView
                android:id="@+id/tv_title"
                android:fontFamily="@font/nunitosans_bold"
                android:layout_gravity="center"
                style="@style/viewParent.headerText.NoMode"
                android:text="@string/already_nhave_an_naccount" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/nunitosans_light"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/nunitosans_light"
                    android:hint="@string/password"
                    app:endIconMode="clear_text"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/greenbow"
                android:fontFamily="@font/nunitosans_regular"
                android:textSize="@dimen/newsMoreTextSize" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login"
                android:fontFamily="@font/nunitosans_bold"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                android:id="@+id/tv_error_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/nunitosans_regular"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:text="@string/akun_nonvalid"/>

            <TextView
                android:id="@+id/on_register_word"
                style="@style/parent"
                android:fontFamily="@font/nunitosans_bold"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/greenbow"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_logreg" />

    <ImageView
        android:id="@+id/on_register_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_add_logreg" />

</RelativeLayout>