<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".ui.LaporFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/siaga_lapor"
            android:textColor="@color/font1"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/include_location"
            layout="@layout/location"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/tv_info_lapor"
            android:gravity="center"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/info_lapor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/iv_emergency"/>

        <ImageView
            android:id="@+id/iv_emergency"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:elevation="10dp"
            android:src="@drawable/phone_call_fix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_location" />

        <TextView
            android:id="@+id/tv_plusword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_lapor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:text="@string/atau"/>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card_hubungi_teks"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plusword"
            app:neumorph_backgroundColor="@color/background_3"
            app:neumorph_shadowColorDark="@color/dark_shadow"
            app:neumorph_shadowColorLight="@color/light_shadow"
            app:neumorph_shadowElevation="2dp"
            app:neumorph_shapeAppearance="@style/NeumorphsimCard"
            app:neumorph_shapeType="flat">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="15dp">
            <TextView
                android:id="@+id/tv_hubungi_teks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/font1"
                android:text="@string/hubungi_dengan_teks" />
            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>