<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/green_lite"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="ui.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="Mulai \nlangkah\nsiaga anda\ndengan\nShelter! "
                    android:textColor="@color/greenbow" />

                <ImageView
                    android:layout_width="270dp"
                    android:layout_height="180dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_disaster2" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:hint="Name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_gender"
                        style="@style/modifiedEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:padding="15dp"/>

                    <RadioGroup
                        android:id="@+id/group_gender"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton android:id="@+id/radio_wanita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="Wanita"
                            android:layout_marginStart="10dp"
                            style="@style/modifiedEditText"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton android:id="@+id/radio_pria"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            style="@style/modifiedEditText"
                            android:text="Pria"
                            android:onClick="onRadioButtonClicked"/>

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputConfirmPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextConfirmPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/daftar"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        android:id="@+id/tv_error_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/nunitosans_regular"
                        android:textColor="@color/red"
                        android:padding="10dp"
                        android:text="@string/error_account" />

                    <TextView
                        android:id="@+id/on_Login_Word"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/already_nhave_an_naccount"
                        android:textAlignment="center"
                        android:textColor="@color/greenbow"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_logreg" />

    <ImageView
        android:id="@+id/on_Login_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_back_logreg" />
</RelativeLayout>
</ScrollView>